<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_TcMatSimObjectDataAreaInfo" Id="{4a2e7d14-c020-4d40-ba5c-8fb19136bd15}">
    <Declaration><![CDATA[TYPE ST_TcMatSimObjectDataAreaInfo :
STRUCT
	pPlcVar: PVOID;
	pModuleProcImg: PVOID;
	nSize: UDINT;
	nDataAreaId: UDINT;
	eDataAreaType: E_TcMatSimDataAreaType;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>